--- a/CarParts/CarParts/Views/Admins/AddMake.cshtml
+++ b/CarParts/CarParts/Views/Admins/AddMake.cshtml
@@ -12,7 +12,7 @@
             <form method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label asp-for="Name">Name</label>
-                    <input asp-for="Name" class="form-control" placeholder="Add part name...">
+                    <input asp-for="Name" class="form-control" placeholder="Add make name...">
                     <span asp-validation-for="Name" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
