--- a/CarParts/CarParts/Views/Admins/EditMake.cshtml
+++ b/CarParts/CarParts/Views/Admins/EditMake.cshtml
@@ -21,7 +21,7 @@
                 <input asp-for="Id" value="@Model.Id" readonly hidden>
                 <div class="form-group">
                     <label asp-for="Name">Name</label>
-                    <input asp-for="Name" value="@Model.Name" class="form-control" placeholder="Add part name...">
+                    <input asp-for="Name" value="@Model.Name" class="form-control" placeholder="Edit part name...">
                     <span asp-validation-for="Name" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
