--- a/CarParts/CarParts/Views/Parts/ChooseMake.cshtml
+++ b/CarParts/CarParts/Views/Parts/ChooseMake.cshtml
@@ -1,24 +1,22 @@
 ﻿@model ICollection<PartCategoryViewModel>;
-@{
-    ViewBag.Title = "Choose Make";
-}
+@{ ViewBag.Title = "Choose Make"; }
 @using Microsoft.AspNetCore.Identity;
 @using CarParts.Data.Models;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-    <link rel="stylesheet" href="~/css/carMenu.css">
-    <h1 style="text-align:center">Choose from the available makes:</h1>
+<link rel="stylesheet" href="~/css/carMenu.css">
+<h1 style="text-align:center">Choose from the available makes:</h1>
 
-    <div class="row mt-2 mb-4">
-        @foreach (var make in Model)
-        {
-            <div class="col-6 col-xl-1 mb-5 mt-5 ml-4 mr-4" >
-                <a asp-controller="Parts" asp-action="AddPart" asp-route-Make="@make.Name">
-                    <img style="width:90px;max-width:90px;height:90px;max-height:90px" src="@make.ImageUrl"
-                         class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
-                         data-placement="bottom" title="@make.Name">
-                </a>
-            </div>
-        }
-    </div>
+<div class="row mt-2 mb-4">
+    @foreach (var make in Model)
+    {
+<div class="col-6 col-xl-1 mb-5  mt-5 ml-4 mr-4">
+    <a asp-controller="Shop" asp-action="Models" asp-route-Make="@make.Name">
+        <img style="width:90px;max-width:90px;height:90px;max-height:90px" src="@make.ImageUrl"
+             class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
+             data-placement="bottom" title="car.Year car.Model">
+        <p style="text-align:right">@make.Name<p>
+    </a>
+</div>}
+</div>
