--- a/CarParts/CarParts/Views/Admins/UsersParts.cshtml
+++ b/CarParts/CarParts/Views/Admins/UsersParts.cshtml
@@ -5,7 +5,7 @@
 
 @if (!Model.Any())
 {
-<h1>You don't have available parts.</h1> }
+<h1>There are no users with posted parts.</h1> }
 else
 {
 <table class="table">
