--- a/CarParts/CarParts/Views/Admins/EditPart.cshtml
+++ b/CarParts/CarParts/Views/Admins/EditPart.cshtml
@@ -33,7 +33,7 @@
                     <select asp-for="CategoryId" class="form-control">
                         @foreach (var carCategory in Model.Categories)
                         {
-            <option value="carCategory.Id">@carCategory.Name</option>}
+            <option value="@carCategory.Id">@carCategory.Name</option>}
                     </select>
                     <span asp-validation-for="CategoryId" class="small text-danger"></span>
                 </div>
